welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: Boolean does not take parameters
while(vuBiscuit() == false) {
               ^Program:10: error: value update is not a member of Boolean
		vuBiscuit() = true;
                ^Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
while(vuBiscuit() == false) {
^